Feat: Created LetterTriangles.BL

--- a/LetterTriangles.Test/LetterTriangles.Test.csproj
+++ b/LetterTriangles.Test/LetterTriangles.Test.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LetterTriangles.BL\LetterTriangles.BL.csproj" />
+  </ItemGroup>
+
 </Project>
